fixed white spaceing in background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,8 +53,9 @@ h3 {
 /* added css to landing page body */
 .backGround {
   background-image: url(../images/backgrounds/start.webp);
-   background-size: auto 100vh;
+  background-size: 100vw 100vh;
   background-position: top center;
+  background-repeat: no-repeat;
 }
 /* added css to battle html body */
 .statCreator {
@@ -154,7 +155,7 @@ h3 {
 
 .forest {
   background-image: url("../images/backgrounds/Battle.png");
-  background-size: auto 100vh;
+  background-size: 100vw 100vh;
   background-position: top center;
 }
 
@@ -340,25 +341,28 @@ li:nth-child(even) {
   .backGround {
     background-image: url(../images/backgrounds/start.webp);
     background-size: cover;
-    background-position:center;
+    background-position: center;
+    background-repeat: repeat;
+  }
+  .forest {
+    background-size: auto 100vh;
+    background-position:top center;
     background-repeat: repeat;
   }
 }
 
 .battle-rules li {
-  text-transform:none;
-   background-color:aliceblue;
-
- 
+  text-transform: none;
+  background-color: aliceblue;
 }
 .battle-rules h5 {
   text-align: center;
 }
 .battle-rules {
-   background-color:aliceblue;
-   border-radius: 5px;
-   -webkit-border-radius: 5px;
-   -moz-border-radius: 5px;
-   -ms-border-radius: 5px;
-   -o-border-radius: 5px;
+  background-color: aliceblue;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
